Revert "fixed browse page on mobile"
This reverts commit e6a0f37950d3e9163ade120e7ef01469545542a8.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1783,7 +1783,10 @@ input.bs-timepicker-field {
     height: $global__top-bar__desktop-height;
   }
   @media (max-width: 991.98px) {
-    margin-top: 65px;
+    margin-top: 30px;
+  }
+  @media (max-width: 390px) {
+    margin-top: 30px;
   }
 }
 
@@ -4160,10 +4163,6 @@ option {
 }
 
 .feed_mobile_gap {
-  @media screen and (max-width: 992px) {
-    margin-top: 7.5px;
-  }
-
   @media screen and (max-width: 676px) {
     padding: 0 10px;
   }
